# windchimes-backend

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.txt  start.sh  vercel.json
alembic/: env.py
alembic/versions/: 2025_01_04_1237-2e09ad600d7d_create_track_reference_model.py  2025_01_04_1614-dfb77c6da464_add_tracks_playlists_many_to_many_.py  2025_01_06_1127-2d625cd588c6_remove_slug_field_for_playlists.py  2025_01_08_1126-680a5a951f85_replace_auto_incrementing_track_.py  2025_01_19_1528-2ae4b1e89376_add_public_bool_field.py  2025_01_19_1625-d170e178960f_rename_public_field_to_publiclyavailable.py  2025_01_19_1659-8c420ef7e3ad_fix_publiclyavailable_field_name_case_.py  2025_02_09_1455-da548534cd50_add_playlist_sync_fields.py  2025_02_09_1554-b744950fd855_replace_sync_playlist_url_with_an_.py  2025_02_09_2012-228ad52ae4cd_add_external_playlist_references.py  2025_02_14_1203-6d41fd38df1e_add_created_at_column_for_external_.py  2025_02_14_1210-c362467d767d_replace_created_at_col_with_last_sync_.py  2025_02_14_1556-a8dcd5cbb2b6_add_soundcloud_secret_token_field_to_.py
scripts/: deploy.sh
windchimes/api/: audio_proxy.py  config.py  lifespan.py  main.py
windchimes/api/mutations/: __init__.py
windchimes/api/queries/: __init__.py
windchimes/api/reusable_schemas/: errors.py  platform.py  playlists.py  track_reference.py
windchimes/api/strawberry_graphql_setup/: __init__.py  auth.py  context.py
windchimes/api/utils/: graphql.py
windchimes/common/api_clients/: imagekit_api_client.py
windchimes/common/utils/: dictionaries.py  user_agent.py
windchimes/core/: config.py
windchimes/core/constants/: external_api_usage_limits.py
windchimes/core/database/: __init__.py
windchimes/core/errors/: external_platforms.py
windchimes/core/models/: external_playlist.py  platform.py  playlist.py  track.py
windchimes/seeding/: main.py
windchimes_backend/: config.py  logging_setup.py
windchimes_backend/api/: config.py  main.py
windchimes_backend/api_clients/: imagekit_api_client.py
windchimes_backend/common/: README.md
windchimes_backend/core/: config.py
windchimes_backend/graphql_api/: config.py  graphql_setup.py  lifespan.py  main.py
windchimes_backend/seeding/: main.py
windchimes_backend/utils/: dictionaries.py  strings.py
(+140 files in other folders)
