[project]
name = "windchimes-backend"
version = "0.1.0"
description = ""
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "uvicorn>=0.34.0,<0.35",
    "fastapi[standard]>=0.115.6,<0.116",
    "strawberry-graphql[fastapi]>=0.279",
    "pydantic-settings>=2.7.1,<3",
    "alembic>=1.14.0,<2",
    "asyncpg>=0.30.0,<0.31",
    "auth0-python>=4.7.2,<5",
    "apscheduler>=3.11.0,<4",
    "yt-dlp>=2024.12.23,<2025",
    "httpx[socks]>=0.28.1,<0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "ruff>=0.13.0",
]

[tool.uv]
package = false

